sat_util.h

int tt_3cnf(int M, int cnf[M][3], int N, int TWO_to_N, int tt[TWO_to_N]);

int get_clusters(int TWO_to_N, int t[TWO_to_N], int t_cluster[TWO_to_N]);